Navigation bar added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,40 @@
 </head>
 <body>
     <header class="header">
+        <div class="header__navbar">
+            <!-- logo -->
+            <div class="header__logo">
+                <img class="logo" src="images/logo.png">
+            </div>
+            <!-- navbar -->
+            <ul class="header__nav">
+                <li class="header__navList"><a href="#" class="header__navLink">Discover</a></li>
+                <li class="header__navList"><a href="#" class="header__navLink">Login</a></li>
+                <li class="header__navList"><a href="#" class="header__navLink">Join</a></li>
+            </ul>
+            <a class="header__uploadBtn" href="#">Upload</a>
+        </div>
+        <div class="header__text">
+            <h1 class="header__title">Royalty stock photos</h1>
+            <input class="searchInput" type="text" placeholder="Search Free Hd Photos">
+            <p><a href="" class="searchLink">Popullar,</a>
+                 <a href="" class="searchLink">Food,</a> 
+                <a href="" class="searchLink">Travel,</a>
+                <a href="" class="searchLink">Photography,</a>
+                <a href="" class="searchLink">Nature,</a> 
+                <a href="" class="searchLink">Moutains,</a> 
+                <a href="" class="searchLink">Technology</a>
+            </p>
+        </div>
 
+        <!-- <div class="header__text">
+            <h1 class="header__textBig"> Discover Your Play List in one click</h1>
+            <p class="header__textSubtitle">Your number one app store for all genre of music</p>
+            <div class="search">
+                <input class="searchInput" type="text">
+            </div>
+        </div> -->
     </header>
+    
 </body>
 </html>
