section galary added

--- a/index.html
+++ b/index.html
@@ -34,15 +34,27 @@
                 <a href="" class="searchLink">Technology</a>
             </p>
         </div>
-
-        <!-- <div class="header__text">
-            <h1 class="header__textBig"> Discover Your Play List in one click</h1>
-            <p class="header__textSubtitle">Your number one app store for all genre of music</p>
-            <div class="search">
-                <input class="searchInput" type="text">
-            </div>
-        </div> -->
     </header>
     
+    <!-------Section------- -->
+    <section class="mainSection">
+        <div class="galary">
+            <h2 class="galary__title">Free Stock Photo</h2>
+            <div class="galary__masonary">
+                <div class="m-block"><img src="images/pic1.png"></div>
+                <div class="m-block"><img src="images/pic2.png"></div>
+                <div class="m-block"><img src="images/pic3.png"></div>
+                <div class="m-block"><img src="images/pic4.png"></div>
+                <div class="m-block"><img src="images/pic5.png"></div>
+                <div class="m-block"><img src="images/pic6.png"></div>
+                <div class="m-block"><img src="images/pic7.png"></div>
+                <div class="m-block"><img src="images/pic8.png"></div>
+                <div class="m-block"><img src="images/pic9.png"></div>
+                <div class="m-block"><img src="images/pic10.png"></div>
+            </div>
+        </div>
+        <a class="galary__btn" href="#">Explore More</a>
+    </section>
+
 </body>
 </html>
