customer section and about added

--- a/index.html
+++ b/index.html
@@ -52,8 +52,36 @@
                 <div class="m-block"><img src="images/pic9.png"></div>
                 <div class="m-block"><img src="images/pic10.png"></div>
             </div>
+            <a class="galary__btn" href="#">Explore More</a>
         </div>
-        <a class="galary__btn" href="#">Explore More</a>
+
+        <div class="customers">
+            <h2 class="customers__title">Our customers</h2>
+            <div class="customers__row">
+                <div class="customers__col">
+                    <img src="images/walmart.png" alt="walmart-logo">
+                </div>
+                <div class="customers__col">
+                    <img src="images/facebook.png" alt="walmart-logo">
+                </div>
+                <div class="customers__col">
+                    <img src="images/microsoft.png" alt="walmart-logo">
+                </div>
+                <div class="customers__col">
+                    <img src="images/adobe.png" alt="walmart-logo">
+                </div>
+            </div>
+        </div>
+        <!---------about -------->
+        <div class="about">
+            <h2 class="about__title">About ImPics</h2>
+            <p>Impics is one of the largest stock photo companies in the world with morethan 10millions of 
+                photos across the globe Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Ad id dolorum sit rem illo quaerat! Quod  magni repellat et iusto necessitatibus corporis
+                 quam corrupti distinctio totam architecto error, libero 
+                perspiciatis!
+            </p>
+        </div>
     </section>
 
 </body>
