footer section added

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
                 perspiciatis!
             </p>
         </div>
+        <!-----------------------footer--------------- -->
+        <div class="footer">
+            <p class="copyright">All right reserved copyright 2021 Impics</p>
+        </div>
     </section>
 
 </body>
